--- a/web/blog.html
+++ b/web/blog.html
@@ -9,11 +9,9 @@
 <style>
     * {
         font-family: 'mc';
-        color: white;
-        user-select: none;
     }
     body {
-        background-image: url("image/light_dirt_background.png");
+        background-image: url("image/book.png");
         background-size: 85px;
     }
 
@@ -80,30 +78,7 @@
         border: white solid 3px;
     }
 </style>
-
 <body>
-<div class="title">登录用户</div>
-<form>
-    <table>
-        <tr>
-            <td>
-                密码
-            </td>
-        </tr>
-        <tr>
-            <input type="text" name="password"/>
-        </tr>
-    </table>
-</form>
-<div class="btn" id="signin">登录</div>
-<div class="btn" id="rtn">返回</div>
+
 </body>
-<script>
-    document.getElementById('rtn').addEventListener('click',function (){
-        location.href='usrs.html';
-    })
-    document.getElementById('signin').addEventListener('click',function () {
-        
-    })
-</script>
 </html>
