--- a/web/signup.html
+++ b/web/signup.html
@@ -27,16 +27,6 @@
         /*border: red solid 2px;*/
     }
 
-    .searchbox {
-        background-image: url("image/text_field.png");
-        background-size: cover;
-        position: relative;
-        margin: 20px auto 0px;
-        width: 700px;
-        height: 70px;
-
-    }
-
     table {
         position: relative;
         /*margin: 0px auto auto;*/
@@ -93,24 +83,30 @@
 </style>
 <body>
 <div class="title">创建新用户</div>
-<form>
+<form id="form" method="get">
     <table>
         <tr>
             <td style="position: relative;left: -19%;color: rgb(160,160,160);font-size: 35px">用户名</td>
         </tr>
         <tr>
             <td>
-                <input type="text" style="font-size: 46px"/>
+                <input type="text" style="font-size: 46px" name="username"/>
             </td>
         </tr>
         <tr>
             <td style="position: relative;left: -20%;color: rgb(160,160,160);font-size: 35px">密码</td>
         </tr>
         <tr>
-            <td><input type="password" style="font-size: 46px"></td>
+            <td><input type="password" style="font-size: 46px" name="password"></td>
+        </tr>
+        <tr>
+            <td style="position: relative;left: -20%;color: rgb(160,160,160);font-size: 35px">头像</td>
+        </tr>
+        <tr>
+            <td><input type="file" style="font-size: 46px" name="url" accept="image/*" required></td>
         </tr>
     </table>
-    <div class="btn" id="create">创建</div>
+    <div class="btn" id="create" v-on:click="create">创建</div>
     <div class="btn" id="rtn">返回</div>
 </form>
 </body>
@@ -119,8 +115,45 @@
     document.getElementById('rtn').addEventListener('click', function () {
         location.href = 'usrs.html';
     });
-    document.getElementById("create").addEventListener('click',function () {
+    var myApp = Vue.createApp({
+        data: function () {
+            return {
+                users: []
+            }
+        },
+        methods: {
+            show: function () {
+                var _this = this;
+                var xhr = new XMLHttpRequest();
 
-    })
+                xhr.onreadystatechange = () => {
+                    if (xhr.readyState == 4 && xhr.status == 200) {
+                        alert(xhr.responseText);
+                    }
+                }
+                xhr.open("get", "http://localhost:8080/LoadAuthor", true);
+                xhr.send();
+            },
+            create: function () {
+
+                var xhr = new XMLHttpRequest();
+                var myform = document.getElementById("form");
+                var tmp = new FormData(myform);
+                xhr.onreadystatechange = () => {
+                    if (xhr.readyState == 4 && xhr.status == 200)
+                        alert(xhr.responseText);
+                }
+                xhr.open('post', 'http://localhost:8080/RegisterCheck', true);
+                var data = new URLSearchParams(tmp).toString();
+                xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+                xhr.send(data);
+
+            }
+        },
+        mounted() {
+            this.show();
+        }
+    });
+    myApp.mount("#app");
 </script>
 </html>
