--- a/web/signin.html
+++ b/web/signin.html
@@ -81,29 +81,59 @@
     }
 </style>
 
-<body>
+<body  id = "app">
 <div class="title">登录用户</div>
 <form>
     <table>
         <tr>
-            <td>
-                密码
-            </td>
+            <td style="position: relative;left: -19%;color: rgb(160,160,160);font-size: 35px">密码</td>
         </tr>
         <tr>
-            <input type="text" name="password"/>
+            <td>
+                <input type="password" style="font-size: 46px" name="password"/>
+            </td>
         </tr>
     </table>
 </form>
-<div class="btn" id="signin">登录</div>
+<div class="btn" id="signin" v-on:click="create()">登录</div>
 <div class="btn" id="rtn">返回</div>
 </body>
 <script>
     document.getElementById('rtn').addEventListener('click',function (){
         location.href='usrs.html';
     })
-    document.getElementById('signin').addEventListener('click',function () {
-        
-    })
+    // document.getElementById('signin').addEventListener('click',function () {
+    //
+    // })
+    var myApp = Vue.createApp({
+        data: function () {
+            return {
+                users: []
+            }
+        },
+        methods: {
+            create: function () {
+                var xhr = new XMLHttpRequest();
+                var myform = document.getElementById("form");
+                var tmp = new FormData(myform);
+                xhr.onreadystatechange = () => {
+                    if (xhr.readyState == 4 && xhr.status == 200) {
+                        var idx = xhr.responseText;
+                        alert(idx);
+                        if(idx =="账号或密码错误!") {
+                            document.getElementById("username").focus();
+                        }else {
+                            location.href("blog.html");
+                        }
+                    }
+                }
+                xhr.open('post', 'http://localhost:8080/LoginCheck', true);
+                xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+                var data = new URLSearchParams(tmp).toString();
+                xhr.send(data);
+            }
+        }
+    });
+    myApp.mount("#app");
 </script>
 </html>
