--- a/web/signup.html
+++ b/web/signup.html
@@ -83,7 +83,7 @@
 </style>
 <body id="app">
 <div class="title">创建新用户</div>
-<form id="form">
+<form id="form" method="post" action="/RegisterCheck" enctype="multipart/form-data">
     <table>
         <tr>
             <td style="position: relative;left: -19%;color: rgb(160,160,160);font-size: 35px">用户名</td>
@@ -103,65 +103,19 @@
             <td style="position: relative;left: -20%;color: rgb(160,160,160);font-size: 35px">头像</td>
         </tr>
         <tr>
-            <td><input id ="url" type="file" style="font-size: 46px" name="url" accept="image/*" required></td>
+            <td><input id="url" type="file" style="font-size: 46px" name="photo" accept="image/*"></td>
         </tr>
     </table>
-    <div class="btn" id="create" v-on:click="create()">创建</div>
+    <button type="submit" class="btn" id="create">创建</button>
     <div class="btn" id="rtn">返回</div>
 </form>
 </body>
 
 <script>
-    document.getElementById('rtn').addEventListener('click', function () {
+    document.getElementById('rtn').addEventListener("click", function () {
         location.href = 'usrs.html';
     });
 
-    var myApp = Vue.createApp({
-        data: function () {
-            return {
-                users: []
-            }
-        },
-        methods: {
-            show: function () {
-                var _this = this;
-                var xhr = new XMLHttpRequest();
-
-                xhr.onreadystatechange = () => {
-                    if (xhr.readyState == 4 && xhr.status == 200) {
-                        alert(xhr.responseText);
-                    }
-                }
-                xhr.open("get", "http://localhost:8080/LoadAuthor", true);
-                xhr.send();
-            },
-            create: function () {
-                var xhr = new XMLHttpRequest();
-                var myform = document.getElementById("form");
-                var tmp = new FormData(myform);
-                var str = "" + document.getElementById("url").value;
-                xhr.onreadystatechange = () => {
-                    if (xhr.readyState == 4 && xhr.status == 200) {
-                        var idx = xhr.responseText;
-                        alert(idx);
-                        if (idx == "该用户名已经存在!") {
-                            document.getElementById("username").focus();
-                        } else {
-                            location.href="usrs.html";
-                        }
-                    }
-                }
-                xhr.open('post', 'http://localhost:8080/RegisterCheck', true);
-                xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-                var data = new URLSearchParams(tmp).toString();
-                data += "&repo=" + str;
-                xhr.send(data);
-            }
-        },
-        mounted() {
-            this.show();
-        }
-    });
-    myApp.mount("#app");
+    // 移除手动处理表单提交的代码，因为现在表单会自动提交
 </script>
 </html>
